src/css/style.css
/* Reset */
* {
  margin: 0;
  padding: 0;
  outline: none;
  border: none;
  text-decoration: none;
  box-sizing: border-box;
  font-family: "Poppins", sans-serif;
  list-style: none;
}

/* Body */
body {
  background-image: url(/src/images/barcelona-map.png);
  display: flex;
  min-height: 100vh;
  flex-direction: row;
}

/* Navigation */
nav {
  position: absolute;
  top: 0;
  bottom: 0;
  height: 100%;
  left: 0;
  background: #ffc90e;
  width: 90px;
  overflow: hidden;
  transition: width 0.2s linear;
  box-shadow: 0 20px 35px rgba(0, 0, 0, 0.1);
  flex: 1;
  z-index: 30;
}

nav a {
  padding: 10px;
  width: 300px;
  position: relative;
  color: rgb(85, 83, 83);
  font-size: 14px;
  display: table;
  transition: background-color 0.2s;
}

nav a:hover {
  background: #deb00d;
}

nav:hover {
  width: 280px;
  transition: all 0.5s ease;
}

nav .content-locked {
  opacity: 35%;
}

/* Logo */
.logo img {
  width: 150px;
}

/* Icons */
.fas {
  position: relative;
  width: 70px;
  height: 55px;
  top: 14px;
  font-size: 25px;
  text-align: center;
  color: #000000;
}

.fa-bars {
  height: 45px;
  top: 1px
}

.nav-item {
  position: relative;
  top: 12px;
  margin-left: 10px;
  color: #000000;
  font-weight: bolder;
}

/* Overlay */
.overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.3);
  z-index: 20;
  opacity: 0;
  transition: opacity 0.5s ease;
  pointer-events: none;
}

nav:hover+.overlay {
  opacity: 1;
  pointer-events: auto;
}

/* Content */
.main {
  display: flex;
  flex-direction: column;
  flex: 5;
}

.content {
  display: flex;
  flex-direction: row;
}

.content>article {
  flex: 3;
  min-height: 60vh;
}

.content>aside {
  background: beige;
  flex: 1;
}

header,
footer {
  height: 10vh;
}

.nav-separator {
  margin-left: 10%;
  margin-right: 10%;
  border: none;
  border-top: 1px solid #000;
  align-self: center;
}

/* Search */
.search-box {
  width: 700px;
  background: #fff;
  margin: 19px 19px 19px 140px;
  border: 1px solid #ffc90e;
  border-radius: 20px;
}

.row {
  display: flex;
  padding: 5px 20px;
}

#input-search-box {
  flex: 1;
  height: 50px;
  background: transparent;
  border: 0;
  outline: 0;
  font-size: 18px;
  color: #333
}

#button-search-box {
  background: transparent;
  border: 0;
  outline: 0;
}

button .fa-solid {
  width: 25px;
  color: #555;
  font-size: 22px;
  cursor: pointer;
}

::placeholder {
  color: #555;
}

.result-box {
  max-height: 300px;
  overflow-y: scroll;
}

.result-box ul {
  border-top: 1px solid #999;
  padding: 15px 10px;
}

.result-box ul li {
  list-style: none;
  border-radius: 3px;
  padding: 15px 10px;
  cursor: pointer;
}

.result-box ul li:hover {
  background: #e9f3ff;
}

/* Login Button */
.login-button {
  position: fixed;
  top: 20px;
  right: 20px;
}

.login-button a {
  display: none;
  align-items: center;
  justify-content: center;
  background-color: #ffc90e;
  color: #000;
  padding: 15px 5px;
  border-radius: 5px;
  text-decoration: none;
  font-weight: bold;
  width: 170px;
  transition: background-color 0.3s;
}

.login-button a:hover {
  background-color: #deb00d;
}

/* Popup */
.popup {
  display: none;
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  padding: 20px;
  border: 1px solid #ccc;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
  border-radius: 1rem;
  z-index: 25;
}

/* User Data */
.info-box {
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  background-color: #fff;
  border-radius: 10px;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
  width: 600px;
  flex: none;
}

.info-form {
  text-align: center;
}

.info-form h2 {
  color: #000000;
  background: #ffc90e;
  text-align: left;
  padding: 5px 0 5px 2rem;
  margin-top: 1.5rem;
  font-size: 24px;
}

.user-img {
  width: 100px;
  height: 100px;
  border-radius: 50%;
  margin-bottom: 10px;
}

#information label {
  display: block;
  margin-bottom: 10px;
}

#information input[type="text"],
#information input[type="email"],
#information input[type="date"],
#information input[type="tel"],
#information textarea {
  width: 100%;
  padding: 10px;
  margin-bottom: 15px;
  border: 1px solid #ccc;
  border-radius: 5px;
  box-sizing: border-box;
}

#information button {
  padding: 10px 20px;
  margin-top: 20px;
  background-color: #ffc90e;
  color: #000000;
  border: none;
  border-radius: 5px;
  cursor: pointer;
  transition: background-color 0.3s ease;
}

#information button:hover {
  background-color: #deb00d;
}

#error-message {
  color: red;
  margin-top: 10px;
}

.top-nav-img>a>img {
  width: 150px;
  height: auto;
}

article#user-information,
article#affiliation-information {
  padding: 2rem 1rem 2rem 3rem;
  text-align: start;
  position: relative;
}

article#user-information img.user-img,
article#affiliation-information img.user-img {
  vertical-align: middle;
  border: 1px solid black;
  float: left;
  margin-right: 20px;
}

article#user-information img.user-img:hover,
article#affiliation-information img.user-img:hover {
  background-color: #000;
  opacity: 50%;
  cursor: pointer;
}

form {
  display: inline-block;
  vertical-align: middle;
  width: calc(100% - 8rem);
}

#information .normal-button {
  width: 30%;
  cursor: pointer;
  transition: background-color 0.3s;
}

#information .red-button:hover {
  border: 1px solid #EB5D61;
  background: #c44549;
  font-weight: bold;
  width: 35%;
  cursor: pointer;
}

#information .red-button {
  border: 1px solid #EB5D61;
  color: #000000;
  font-weight: bold;
  background: #EB5D61;
  width: 35%;
  cursor: pointer;
  transition: background-color 0.3s;
}

#change-password-button {
  color: #000;
  transition: background-color 0.3s;
}

article {
  padding: 1rem;
}

footer {
  vertical-align: bottom;
}

/* History */
.history-item {
  margin-bottom: 20px;
  padding-bottom: 20px;
}

.bold {
  font-weight: bold;
}

.date {
  color: #888;
}

.opinion {
  margin-top: 10px;
  font-style: italic;
}

/* Plan */
.div-popup {
  border-radius: 8px;
  padding: 15px;
  margin-bottom: 20px;
  background: #f0f0f0;
}

.plan {
  border-radius: 8px;
  padding: 15px;
  margin-bottom: 20px;
  background: linear-gradient(to left, #f0f0f0 45%, #ffc90e);
}

.plan h3 {
  color: #555;
  margin-bottom: 10px;
}

.plan a button {
  background-color: #ffc90e;
  color: #fff;
  border: none;
  border-radius: 4px;
  padding: 10px 20px;
  margin: 5px;
  cursor: pointer;
  transition: background-color 0.3s;
}

.plan a button:hover {
  background-color: #deb00d;
}

.div-plan {
  text-align: left;
  display: inline-block;
  width: 50%;
  height: 10rem;
  border-radius: 0.5rem;
}

.text-plan {
  padding: 0.2rem 1rem;
  vertical-align: top;
  text-align: left;
  display: inline-block;
  width: 47%;
}

.div-plan h3 {
  padding: 5px;
  color: #000;
  font-size: 40px;
  width: 15%;
}

#upgrade-button {
  background-color: #deb00d;
}

#upgrade-button:hover {
  background-color: #b28e0c;
}

/* Coupon */
.coupon {
  display: flex;
  justify-content: space-between;
  align-items: center;
  border-radius: 8px;
  padding: 15px;
  margin-bottom: 20px;
}

.coupon-details {
  width: 60%;
}

.coupon-action {
  width: 30%;
}

.coupon h3 {
  margin-top: 0;
}

.coupon p {
  margin-bottom: 5px;
}

.coupon button {
  width: 100%;
  background-color: #ffc90e;
  color: #000;
  border: none;
  border-radius: 4px;
  padding: 10px 20px;
  cursor: pointer;
  transition: background-color 0.3s;
}

.coupon button:hover {
  background-color: #deb00d;
}

/* Wishlist */
.wishlist-item {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 10px 0;
  border-bottom: 1px solid #e0e0e0;
}

.wishlist-item:last-child {
  border-bottom: none;
}

.wishlist-item div {
  display: flex;
  align-items: center;
}

.wishlist-item span {
  font-weight: bold;
  color: #333;
  margin-right: 10px;
}

.wishlist-item small {
  color: #888;
}

.wishlist-item .fa-save {
  color: #333;
  cursor: pointer;
}

.wishlist-item .fa-save:hover {
  color: #007bff;
}

/* Location and Map */
.map-marker {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  color: #FFD43B;
  font-size: 2.5rem;
  z-index: 10;
}

.mcdonalds-marker {
  position: absolute;
  color: #c44549;
  font-size: 2.5rem;
  display: none;
  z-index: 10;
}

.show-marker {
  display: inline-block !important;
}

#mcdonalds1 {
  top: 30%;
  left: 30%;
  transform: translate(-30%, -30%);
}

#mcdonalds2 {
  top: 80%;
  left: 15%;
  transform: translate(-80%, -15%);
}

#mcdonalds3 {
  top: 60%;
  left: 80%;
  transform: translate(-60%, -80%);
}

/* Cookies */
#cookies {
  display: flex;
  justify-content: space-between;
  align-items: center;
  position: fixed;
  bottom: 20px;
  left: 50%;
  transform: translateX(-50%);
  background-color: rgba(255, 255, 255, 1);
  padding: 1rem 1rem;
  font-size: smaller;
  font-style: italic;
  border-radius: 20px;
  border: 1px solid #ffc90e;
  gap: 20px;
}

.cookies-text {
  width: 600px;
}

.cookies-buttons {
  display: flex;
  align-items: center;
  gap: 10px;
  transition: background-color 0.3s;
}

.check {
  border-radius: 10px;
  font-weight: bolder;
}

.check:hover {
  cursor: pointer;
}

.cookies-accept {
  color: black;
  background: #ffc90e;
  padding: 0.5rem;
  transition: background-color 0.3s;
}

.cookies-accept:hover {
  color: black;
  background: #ffd438;
}

.cookies-readmore {
  padding: 0.5rem;
  transition: background-color 0.3s;
}

.cookies-readmore:hover {
  background-color: #e5e5e5;
}

.cookies-close {
  cursor: pointer;
  font-weight: bold;
  font-size: xx-large;
}

.cookies-restart {
  position: fixed;
  right: 50px;
  top: 30px;
  display: none;
  align-items: center;
  justify-content: center;
  background-color: #ffc90e;
  color: #000000;
  border-radius: 5px;
  text-decoration: none;
  font-weight: bold;
}

.cookies-restart a:hover {
  background-color: #deb00d;
}

.cookies-restart button {
  align-items: center;
  justify-content: center;
  background-color: #ffc90e;
  color: #000000;
  padding: 15px 5px;
  border-radius: 5px;
  text-decoration: none;
  font-weight: bold;
  width: 300px;
  transition: background-color 0.3s;
}

.cookies-restart button:hover {
  background-color: #deb00d;
  cursor: pointer;
}

/* Admin Pop up */
/* .image-upload > input {
  display: none;
} */

.image-upload label {
  display: inline-block;
  padding-right: 20px;
}

.img.image-upload {
  display: inline-block;
}

.img {
  display: inline-block;
}

.hover-box {
  position: relative;
  width: 100px;
  height: 100px;
  overflow: hidden;
}

.hover-content {
  text-align: center;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.7);
  display: flex;
  justify-content: center;
  align-items: center;
  color: #fff;
  opacity: 0;
  font-style: italic;
  transition: opacity 0.3s ease;
  display: inline-block;
  border-radius: 50%;
}

.hover-content span {
  padding-top: 40px;
  display: inline-block;
}

.hover-box:hover .hover-content {
  opacity: 1;
  cursor: pointer;
}

/* Media Queries */
@media only screen and (max-width: 768px) {
  .search-box {
    width: 50%;
    margin: 19px auto;
  }

  .login-button a {
    width: 100px;
  }
}

